Add image path for Kaggle

--- a/2. Faces VAE.ipynb
+++ b/2. Faces VAE.ipynb
@@ -231,6 +231,10 @@
    "source": [
     "t.image_root = \"../../../../data/vae/img_align_celeba/\"\n",
     "t.image_folder = f\"{t.image_root}/img_align_celeba\"\n",
+    "\n",
+    "# t.image_root = \"../input/celeba-dataset/\"\n",
+    "# t.image_folder = f\"{t.image_root}/img_align_celeba/img_align_celeba\"\n",
+    "\n",
     "t.output_folder = \"../working\"\n",
     "t.crop_size = 178"
    ]
