Fix model loading bug
Notebook run fails when trying to find model in `pretrained-models` folder. Small change to find model in working directory with most recent timestamp and load that.

--- a/2. Faces VAE.ipynb
+++ b/2. Faces VAE.ipynb
@@ -1794,7 +1794,9 @@
    },
    "outputs": [],
    "source": [
-    "t.model = torch.load(\"pretrained-models/faces_vae.pkl\")"
+    "# Load saved model with the most recent timestamp.",
+    "t.model_file = [f for f in sorted(os.listdir()) if f.startswith(\"faces_vae_\")][-1]",
+    "t.model = torch.load(t.model_file)"
    ]
   },
   {
