--- a/2. Faces VAE.ipynb
+++ b/2. Faces VAE.ipynb
@@ -1794,8 +1794,8 @@
    },
    "outputs": [],
    "source": [
-    "# Load saved model with the most recent timestamp.",
-    "t.model_file = [f for f in sorted(os.listdir()) if f.startswith(\"faces_vae_\")][-1]",
+    "# Load saved model with the most recent timestamp.\n",
+    "t.model_file = [f for f in sorted(os.listdir()) if f.startswith(\"faces_vae_\")][-1]\n",
     "t.model = torch.load(t.model_file)"
    ]
   },
