--- a/2. Faces VAE.ipynb
+++ b/2. Faces VAE.ipynb
@@ -231,9 +231,12 @@
    "source": [
     "t.image_root = \"../../../../data/vae/img_align_celeba/\"\n",
     "t.image_folder = f\"{t.image_root}/img_align_celeba\"\n",
+    "t.loader_threads = 8\n",
     "\n",
+    "# Uncomment to run on Kaggle\n",
     "# t.image_root = \"../input/celeba-dataset/\"\n",
     "# t.image_folder = f\"{t.image_root}/img_align_celeba/img_align_celeba\"\n",
+    "# t.loader_threads = 2\n",
     "\n",
     "t.output_folder = \"../working\"\n",
     "t.crop_size = 178"
@@ -1769,7 +1772,11 @@
     "tags": []
    },
    "source": [
-    "# Load Model"
+    "# Load Model\n",
+    "\n",
+    "Uncomment the code below if you **didn't** train the model above, and would like to load the pre-trained model, and continue from this point.\n",
+    "\n",
+    "Otherwise, we'll use the model we've just trained."
    ]
   },
   {
@@ -1795,8 +1802,8 @@
    "outputs": [],
    "source": [
     "# Load model with most recent timestamp.\n",
-    "t.model_file = [f for f in sorted(os.listdir()) if f.startswith(\"faces_vae_\")][-1]\n",
-    "t.model = torch.load(t.model_file)"
+    "# t.model_file = [f for f in sorted(os.listdir()) if f.startswith(\"faces_vae_\")][-1]\n",
+    "# t.model = torch.load(t.model_file)"
    ]
   },
   {
@@ -2582,7 +2589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   },
   "papermill": {
    "default_parameters": {},
